play/stop, slide bar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8" />
     <title>My player</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
     <script src="/js/player.js"></script>
     <script src="/js/my.js"></script>
+
+    <link rel="stylesheet" href="css/font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <video width="520" height="340" controls>
@@ -26,4 +32,3 @@
     </video>
   </body>
 </html>
-
