--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>My player</title>
+<head>
+  <meta charset="utf-8"/>
+  <title>My player</title>
 
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="/js/VideoPlayer.js"></script>
-    <script src="/js/my.js"></script>
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="/js/VideoPlayer.js"></script>
+  <script src="/js/my.js"></script>
 
-    <link rel="stylesheet" href="vendor/normalize-css/normalize.css"/>
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" href="assets/css/main.css"/>
-  </head>
-  <body>
-    <video controls>
-      <source src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs2i6.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%961.360.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <link rel="stylesheet" href="vendor/normalize-css/normalize.css"/>
+  <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css"/>
+  <link rel="stylesheet" href="assets/css/main.css"/>
+</head>
+<body>
+<video controls id="m1">
+  <source
+    src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs2i6.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%961.360.mp4"
+    type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
-    <video controls>
-      <source src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs5ny.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%962.360.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+<video controls id="m2">
+  <source
+    src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs5ny.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%962.360.mp4"
+    type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
-    <video controls>
-      <source src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs8tq.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%963.360.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </body>
+<video controls id="m3">
+  <source
+    src="http://fs.to/get/dl/698jgp04cwo51oyoojulzs8tq.0.1139013157.2284938935.1456426044/%D0%9F%D0%BE%D1%81%D1%96%D0%BF%D0%B0%D0%BA%D0%B8+%28%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9%29+%E2%84%963.360.mp4"
+    type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+</body>
 </html>
